Version 1.0.2 -- DEVELOPMENT
----------------------------
- Select All works through the search
- Better escaped string handling from POST variables
- Fixed bug that set all wrong.
- Many more code cleanups and optomizations
- Updated Sweedish translation
- Updated Finnish translation

Version 1.0.1 -- February 1, 2001 
---------------------------------
- Improved the way sqimap_read_data() is handled
- Sped up "no sorting" even more 
- Fixed problems with sending messages
- Fixed some pass-by-reference calls that caused problems with newer PHP versions
- Fixed bug that didn't display last folder subscribed to
- Removed requirement of PHP 4.0.1 for array_unique() function
- Removed unnecessary echo statements by breaking out of PHP
- Changed evaluation method from using " to ' for speed improvements
- If no plugin array set in config.php, now handled correctly
- If subject is > 55 chars, trims it and puts "..." in message list
- Hundreds of minor changes to remove all verbose PHP warning messages

Version 1.0 -- January 30, 2001 
-------------------------------
- Updated config_default.php to include attachment_common plugin (now in distribution)
- A few minor speed improvements
- Fixed problems in sqimap_read_body(), made it more reliable
- Added French translation of help files by  gore K <gore_k@ymca-cepiere.org>
- Added Finnish translation by Teemu Junnila <teejun@vallcom.com>
- Updated Sweedish translation
- Updated Russian translation

Version 1.0pre3 -- January 22, 2001 
-----------------------------------
- Fixed some "Select All" bugs
- Finally fixed the IE/SSL download problem!!
- Added Danish translation by Claus Rasmussen <claus@webclaus.com>
- Updated Spanish translation
- Updated Polish translation
- Updated Taiwan translation
- Updated Czech translation
- Updated Korean translation

Version 1.0pre2 -- January 15, 2001 
-----------------------------------
- A number of security fixes